--- a/NodeConsoleApp2/src/package.json
+++ b/NodeConsoleApp2/src/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
+    "scripts": {
+        "build": "vite build",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
